--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,3 +15,5 @@ jobs:
       uses: actions/checkout@v2
     - name: Display system info
       run: uname -a
+    - name: Display system info
+      run: ls -lrt
