--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,7 +19,10 @@ jobs:
       run: |
         echo "DATE=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
         echo "Date is ${{ env.DATE }}"
-      
+    
+    - name: Print DATE variable
+      run: echo "DATE is ${{ env.DATE }}"
+
     - name: Ensure dpkg is configured and no locks are held
       run: |
         sudo rm -f /var/lib/dpkg/lock-frontend
