--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,6 +6,8 @@ on:
       - master
       - 'bhagwan/*'
       - release
+  schedule:
+    - cron: '15 11 * * *'  
 jobs:
   build:
     runs-on: ubuntu-22.04
