--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,8 +6,9 @@ on:
       - master
       - 'bhagwan/*'
       - release
+  workflow_dispatch:
   schedule:
-    - cron: '15 11 * * *'  
+    - cron: '27 11 * * *'  
 jobs:
   build:
     runs-on: ubuntu-22.04
