--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,6 +6,8 @@ on:
       - master
       - 'bhagwan/*'
       - release
+     tags:
+       - "*"
   workflow_dispatch:
   schedule:
     - cron: '35 11 * * *'  
