--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,8 +23,9 @@ jobs:
     
     - name: Copy artifacts to release folder
       if: startsWith(github.ref, 'refs/tags/')
-      run: echo "Tag name: ${{ github.ref_name }}"
-
+      run: |
+            echo "Tag name: ${{ github.ref_name }}"
+      
     - name: Display system info
       run: uname -a
     - name: Display system info
