--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,14 @@ jobs:
     steps:
     - name: Check out the code
       uses: actions/checkout@v2
+    - name: Print GitHub Ref
+      run: echo "GitHub ref is ${{ github.ref }}"
+    
+    - name: Copy artifacts to release folder
+      if: startsWith(github.ref, 'refs/tags/')
+      run: |
+            echo "Tag name: ${{ github.ref_name }}"
+      
     - name: Display system info
       run: uname -a
     - name: Display system info
