--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,12 +14,21 @@ on:
 jobs:
   build:
     runs-on: ubuntu-22.04
-
+    env:
+      DATE: $(date +'%Y%m%d')
+      DIR: ${{ github.workspace }}/${{ env.DATE }}/test
     steps:
     - name: Check out the code
       uses: actions/checkout@v2
     - name: Print GitHub Ref
-      run: echo "GitHub ref is ${{ github.ref }}"
+      run: |  
+            echo "DATE is ${{ env.DATE }}"
+            echo "DIR is ${{ env.DIR }}"
+            mkdir ${{ env.DIR }}
+            echo "GitHub ref is ${{ github.ref }}"
+            echo "DATE is ${{ env.DATE }}"
+            echo "DIR is ${{ env.DIR }}"
+            ls -lrt ${{ github.workspace }}
     
     - name: Copy artifacts to release folder
       if: startsWith(github.ref, 'refs/tags/')
