--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,7 +49,9 @@ jobs:
       run: sudo apt-get install -y mailutils
 
     - name: Run the script
-      run : scripts/test.sh $WORKDIR
+      run : |
+          sudo chmod +x ./scripts/test.sh
+          sudo ./scripts/test.sh $WORKDIR
   
     - name: Upload Artifact
       uses: actions/upload-artifact@v4
