--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,6 +38,9 @@ jobs:
         DATE=$(date +'%Y-%m-%d')
         TIME=$(date +'%H-%M-%S')
         echo "DATE_TIME=${DATE}-${TIME}" >> $GITHUB_ENV
+        mkdir -pv $WORKDIR/build_flag
+        echo "FLAG=$WORKDIR/build_flag" >>  $GITHUB_ENV
+        echo  $GITHUB_ENV
         
     - name : print date
       run: echo "Date is ${{ env.DATE_TIME }}"
