--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,7 +38,7 @@ jobs:
         DATE=$(date +'%Y-%m-%d')
         TIME=$(date +'%H-%M-%S')
         echo "DATE_TIME=${DATE}-${TIME}" >> $GITHUB_ENV
-        mkdir -pv $WORKDIR/build_flag
+      #  mkdir -pv $WORKDIR/build_flag
         echo "FLAG=$WORKDIR/build_flag" >>  $GITHUB_ENV
         echo  $GITHUB_ENV
         
