--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,7 +39,7 @@ jobs:
         TIME=$(date +'%H-%M-%S')
         echo "DATE_TIME=${DATE}-${TIME}" >> $GITHUB_ENV
         echo "FLAG=$WORKDIR/build_flag" >>  $GITHUB_ENV
-        echo  $GITHUB_ENV
+        echo "Date is ${{ env.FLAG }}"
         
     - name : print date
       run: echo "Date is ${{ env.DATE_TIME }}"
