--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,6 +37,7 @@ jobs:
         echo '${{ secrets.HOST_KEY }}'
         DATE=$(date +'%Y-%m-%d')
         TIME=$(date +'%H-%M-%S')
+        echo "WORKDIR is: $WORKDIR"
         echo "DATE_TIME=${DATE}-${TIME}" >> $GITHUB_ENV
         echo "FLAG=$($WORKDIR/build_flag)" >>  $GITHUB_ENV
         echo "Date is ${{ env.FLAG }}"
