--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,7 +40,7 @@ jobs:
         WORKDIR="/a/b/c/d";echo "WORKDIR=$WORKDIR" >> $GITHUB_ENV
         echo "DATE_TIME=${DATE}-${TIME}" >> $GITHUB_ENV
         echo "FLAG=$WORKDIR/build_flag" >>  $GITHUB_ENV
-        echo "Date is ${{ env.FLAG }}"
+        echo "FLAG: $FLAG"
         
     - name : print date
       run: echo "Date is ${{ env.DATE_TIME }}"
