--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,7 +37,7 @@ jobs:
         echo '${{ secrets.HOST_KEY }}'
         DATE=$(date +'%Y-%m-%d')
         TIME=$(date +'%H-%M-%S')
-        echo "FLAG=${WORKDIR}/build_flag" >> $GITHUB_ENV
+        echo "FLAG=${WORKDIR}/${{ env.DATE }}/build_flag" >> $GITHUB_ENV
         echo "DATE_TIME=${DATE}-${TIME}" >> $GITHUB_ENV
         echo "FLAG: $FLAG"
         
