--- a/.github/workflows/consume.yml
+++ b/.github/workflows/consume.yml
@@ -14,7 +14,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-22.04
-
+    if: github.event.workflow_run.event == 'schedule' || startswith(github.event.workflow_run.head_branch, 'refs/tags/')
     steps:
     - name: Check out the code
       uses: actions/checkout@v2
