--- a/.github/workflows/consume.yml
+++ b/.github/workflows/consume.yml
@@ -9,9 +9,11 @@ on:
 jobs:
   build:
     runs-on: ubuntu-22.04
-    if: (github.event.workflow_run.event == 'schedule' || startswith(github.event.workflow_run.ref, 'refs/tags/'))
+  #  if: (github.event.workflow_run.event == 'schedule' || startswith(github.event.workflow_run.ref, 'refs/tags/'))
     steps:
     - name: Check out the code
       uses: actions/checkout@v2
+    - name: Dump GitHub context
+      run: echo '${{ toJson(github.event.workflow_run) }}'
     - name: wait
       run: sleep 10
