--- a/.github/workflows/produce.yml
+++ b/.github/workflows/produce.yml
@@ -7,6 +7,9 @@ on:
       - master
     tags:
       - '*'
+  schedule:
+    - cron: '45 08 * * *'
+    
 jobs:
   build:
     runs-on: ubuntu-22.04
