--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,6 +42,7 @@ jobs:
         cd ${{ github.workspace }}/scripts
         chmod +x script.sh
         ./script.sh
+        ls -lrt 
     - name: Display system info
       continue-on-error: true
       run: |
@@ -70,6 +71,7 @@ jobs:
     - name: Send email
       run: |
         echo "Build Completed" | mail -s "GitHub Actions Status" khodiarbhagwan@gmail.com
+
 
 
 
