--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -19,4 +19,6 @@ jobs:
         echo "GitHub ref is ${{ github.ref }}"
         echo "Current commit SHA is $GITHUB_SHA"
         echo $GITHUB_SHA > sha.txt
+        echo ${{ github.run_number }}
+        echo ${{ github.run_attempt }}
       
